<resources>
    <string name="app_name">PokeTest</string>
    <string name="pokemon_example">Pokemon Example</string>
    <string name="poke_description_example">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="list_loading_error">Ha habido un problema con la red.\n Asegúrese de estar conectado a internet y deslice hacia abajo para recargar</string>
    <string name="detail_height">Altura: </string>
    <string name="detail_weight">Peso: </string>
    <string name="detail_base_experience">Experiencia base: </string>
    <string name="detail_types">Tipos: </string>
</resources>