<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailFragment">

    <ScrollView
        android:id="@+id/detail_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pokemon_example"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/detail_types"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_image" />

            <TextView
                android:id="@+id/detail_types_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="start|end|center_vertical"
                android:text="@string/detail_types"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/detail_height_tag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_name" />

            <TextView
                android:id="@+id/detail_types"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif"
                android:gravity="start|end|center_vertical"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/detail_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_types_tag"
                app:layout_constraintTop_toBottomOf="@+id/detail_name" />

            <TextView
                android:id="@+id/detail_height_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="start|end|center_vertical"
                android:text="@string/detail_height"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/detail_weight_tag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_types_tag" />

            <TextView
                android:id="@+id/detail_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif"
                android:gravity="start|end|center_vertical"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_height_tag"
                app:layout_constraintTop_toBottomOf="@+id/detail_types" />

            <TextView
                android:id="@+id/detail_weight_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:gravity="start|end|center_vertical"
                android:text="@string/detail_weight"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/detail_base_experience_tag"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_height_tag" />

            <TextView
                android:id="@+id/detail_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif"
                android:gravity="start|end|center_vertical"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_weight_tag"
                app:layout_constraintTop_toBottomOf="@+id/detail_height" />

            <TextView
                android:id="@+id/detail_base_experience_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:gravity="start|end|center_vertical"
                android:text="@string/detail_base_experience"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_weight_tag" />

            <TextView
                android:id="@+id/detail_base_experience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:gravity="start|end|center_vertical"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_base_experience_tag"
                app:layout_constraintTop_toBottomOf="@+id/detail_weight" />

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="0dp"
                android:layout_height="263dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toTopOf="@+id/detail_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>